--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 <body>
 	<table id="bannertable" class="bannertable" width="800"><tr><td class="bannertable">Banner</td></tr></table>
 	<p>&nbsp;</p>
-	<table id="topnavigation" class="topnavigation" width="800"><tr><td class="bannertable"><a href="digtaltechnologies.html">Digital Technologies</a></td><td class="bannertable"><a href="designtechnologies.html">Design Technologies</a></td><td class="bannertable"><a href="mediaarts.html">Media Arts</a></td><td class="bannertable"><a href="ict.html">ICT Use</a></td></tr></table>
+	<table id="topnavigation" class="topnavigation" width="800"><tr><td class="bannertable" width="25%"><a href="digtaltechnologies.html">Digital Technologies</a></td><td class="bannertable" width="25%"><a href="designtechnologies.html">Design Technologies</a></td><td class="bannertable" width="25%"><a href="mediaarts.html">Media Arts</a></td><td class="bannertable" width="25%"><a href="ict.html">ICT Use</a></td></tr></table>
 	<p>&nbsp;</p>
 	<h1 id="headingone" class="headingone">Technologies in the Curriculum</h1>
 	<p>&nbsp;</p>
@@ -133,7 +133,9 @@
 		</tr>
 		<tr>
 			<td>
-				<table id="nav2" class="nav2"><tr valign="top">
+				<table id="nav2" class="nav2">
+				<tr><td>&nbsp;</td></tr>
+				<tr valign="top">
 					<td><table id="address" class="address">
 						<tr><td>Wallarano Primary School</td></tr>
 						<tr><td>38-64 Wallarano Drive</td></tr>
