--- a/index.html
+++ b/index.html
@@ -2,155 +2,97 @@
 <html>
 <head>
 <meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Mr Drake's Website</title>
-</head>
+<!-- <link href="css/bootstrap.css" rel="stylesheet" type="text/css"> -->
+<link href="css/bootstrap-3.3.7.css" rel="stylesheet" type="text/css">
+
+
 
 	<style type="text/css">
-
-		/* Banner table*/
-		table.bannertable {
-			margin-left:auto; 
-    		margin-right:auto;
-			border: thin solid;
+		body {
+			background-color:#3d8fa0;
 		}
-		td.bannertable {
-			border: thin solid;
+		div.container {
+			width: 800px;
+			background-color: white;
+		}
+		header {
 			text-align: center;
 		}
-		
-		/* navigation table */
-		table.topnavigation {
-			margin-left:auto; 
-    		margin-right:auto;
-			border: thin solid;
+		header.heading1 {
+			background-color:#4aacc1;
+			padding-top: 1%;
+			padding-bottom: 2%;
 		}
-		td.topnavigation {
-			border: thin solid;
-		}
-		
-		/* heading one */
-		h1.headingone {
-			text-align: center;
-		}
-		
-		/* main text 1 */
-		table.maintext1 {
-			margin-left:auto; 
-    		margin-right:auto;
-			vertical-align: top text-top;
-			border: thin solid; 
-		}
-		td.maintext1 { 
-			vertical-align: top text-top;
-		}
-		
-		/* main text 2 */
-		table.maintext2 {
-			margin-left:auto; 
-    		margin-right:auto;
-			border: thin solid;
-		}
-		td.maintext2 {
-			text-align: left;
-		}
-		
-		/* bottomnavigation */
-		table.bottomnavigation {
-			margin-left:auto; 
-    		margin-right:auto;
-			border: thin solid; 
-		}
-		
-		/* nav1 */
-		table.nav1 {
-			margin-left:auto; 
-    		margin-right:auto;
-			border: thin solid;
-		}
-		td.nav1 {
-			text-align: center;
-		}
-		
-		/* nav2 */
-		table.nav2 {
-			margin-left:auto; 
-    		margin-right:auto;
-			border: thin solid;
-		}
-		
-		/* Contact us */
-		td.contactus {
-			text-align: left;
-		}
-		/* Sitemap */
-		td.sitemap {
-			text-align: center;
-		}
-		/* Privacy Policy */
-		td.privacy {
-			text-align:right;
+		h1 {
+			color:white;
 			
 		}
-		
-		/* address */
-		table.address {
-			border: thin solid;
+		nav {
+			text-align: center;
+			margin-left: 1%;
+			margin-right: 1%;
+			padding-bottom: 6%;
+			padding-top: 4%;
 		}
-		td.address{
-			border: thin solid;
+		figure {
+			float: left;
+			margin-right: 2%;
 		}
-		
-		/* social media */
-		table.socialmedia {
-			border: thin solid;
+		div.section1{
+			padding-top:6%;
 		}
-		td.socialmedia{
-			border: thin solid;
+		section.maintext {
+			padding-bottom: 5%;
+			padding-top:5%;
 		}
-		
 	</style>
-
+</head>
 <body>
-	<table id="bannertable" class="bannertable" width="800"><tr><td class="bannertable">Banner</td></tr></table>
-	<p>&nbsp;</p>
-	<table id="topnavigation" class="topnavigation" width="800"><tr><td class="bannertable" width="25%"><a href="digtaltechnologies.html">Digital Technologies</a></td><td class="bannertable" width="25%"><a href="designtechnologies.html">Design Technologies</a></td><td class="bannertable" width="25%"><a href="mediaarts.html">Media Arts</a></td><td class="bannertable" width="25%"><a href="ict.html">ICT Use</a></td></tr></table>
-	<p>&nbsp;</p>
-	<h1 id="headingone" class="headingone">Technologies in the Curriculum</h1>
-	<p>&nbsp;</p>
-	<table id="maintext1" class="maintext1" width="800"><tr><td class="maintext1" valign="top"><img src="lightbulb.jpg"></img></td><td class="maintext1">&nbsp;</td><td class="maintext1">abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {}abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI</td></tr></table>
-	<p>&nbsp;</p>
-	<table id="mainttext2" class="maintext2" width="800"><tr><td class="maintext2">abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {}abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {}abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI</td></tr></table>
-	<p>&nbsp;</p>
-	<table id="bottomnavigation" class="bottomnavigation">
-		<tr>
-			<td>
-				<table id="nav1" class="nav1" width="100%"><tr>
-					<td id="contactus" class="contactus"><a href="contactus.html">Contact Us</a></td>
-					<td id="sitemap" class="sitemap"><a href="sitemap.html">Sitemap</a></td>
-					<td id="privacy" class="privacy"><a href="privacy.html">Privacy Policy</a></td>
-				</tr></table>
-			</td>
-		</tr>
-		<tr>
-			<td>
-				<table id="nav2" class="nav2">
-				<tr><td>&nbsp;</td></tr>
-				<tr valign="top">
-					<td><table id="address" class="address">
-						<tr><td>Wallarano Primary School</td></tr>
-						<tr><td>38-64 Wallarano Drive</td></tr>
-						<tr><td>Noble Park</td></tr>
-					</table></td>
-					<td><table id="socialmedia" class="socialmedia">
-						<tr>
-							<td>twitter</td>
-							<td>facebook</td>
-							<td>instagram</td>
-						</tr>
-					</table></td>
-				</tr></table>
-			</td>
-		</tr>
-	</table>
+	<div class="container" >
+	<div>&nbsp;</div>
+	<header><img src="webmaster-technologies.jpg" width="766"></header>
+	<div>&nbsp;</div>
+	<nav><a href="digtaltechnologies.html">Digital Technologies</a>
+	<a href="designtechnologies.html">Design Technologies</a>
+	<a href="mediaarts.html">Media Arts</a>
+	<a href="ict.html">ICT Use</a>
+	</nav>
+	
+	<header class="heading1"><h1>Technologies in the Curriculum</h1></header>
+	
+	<div class="section1"><figure><img src="lightbulb.jpg"></img></figure><section>abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {}abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI</section></div>
+	
+	<section class="maintext">abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {}abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {}abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {}abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {}abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI </section>
+		
+  	  <div class="row" style="background-color:#4aacc1; padding-top: 1%; padding-bottom: 1%; margin-left: 0.1%; margin-right: 0.1%">
+		  <div class="col-lg-4" align="left"><a href="contactus.html"><span style="color:white">Contact Us</span></a></div>
+		  <div class="col-lg-4" align="center"><a href="sitemap.html"><span style="color:white">Sitemap</span></a></div>
+		  <div class="col-lg-4" align="right"><a href="privacy.html"><span style="color:white">Privacy Policy</a></span></div>
+	  </div>
+	  <div class="row">&nbsp;</div>
+	  <div class="row">&nbsp;</div>
+	  <div class="row">&nbsp;</div>
+	  <div class="row">&nbsp;</div>
+	  <div class="row">
+	    <div class="col-lg-6">
+	      <div class="row">
+	        <div class="col-lg-12">Wallarano Primary School</div>
+	        <div class="col-lg-12">38-64 Wallarano Drive</div>
+	        <div class="col-lg-12">Noble Park</div>
+          </div>
+	    </div>
+	    <div class="col-lg-6">
+	      <div class="row">
+	        <div class="col-lg-4">Facebook</div>
+	        <div class="col-lg-4">Instagram</div>
+	        <div class="col-lg-4">Twitter</div>
+          </div>
+	    </div>
+      </div>
+      
+</div>
 </body>
 </html>
