--- a/index.html
+++ b/index.html
@@ -22,11 +22,33 @@
 		div.section1{
 			padding-top:2%;
 		}
-		section.maintext {
+		section.lasttext {
+			padding-top: 1%;
 			padding-bottom: 5%;
-			padding-top:5%;
 		}
-		
+		span.strong {
+			font-weight: bold;
+			color: #00728a;
+		}
+		section.items {
+			padding-left: 60%;
+		}
+		ol.items{
+			padding-top: 2%;
+			padding-bottom: 2%;
+		}
+		li.items{
+			padding-bottom: 2%;
+		}
+		section.rational{
+			padding-top: 5%;
+			font-weight:bold;
+			color: #00728a;
+		}
+		section.maintext{
+			padding-top: 1%;
+			
+		}
 	</style>
 </head>
 <body>
@@ -45,9 +67,23 @@
 	
 	
 	<header class="about"><h2>About</h2></header>
-	<div class="section1"><figure><img src="lightbulb.jpg" alt="Lightbulb"></img></figure><section>abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {}abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI</section></div>
-	
-	<section class="maintext">abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {}abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF GHI JKL MNO PQRS TUV WXYZ !"§ $%& /() =?* '<> #|; ²³~ @`´ ©«» ¤¼× {} abc def ghi jkl mno pqrs tuv wxyz ABC DEF </section>
+	<div class="section1"><figure><img src="lightbulb.jpg" alt="Lightbulb"></img></figure><section><span class="strong">The Australian Curriculum: Technologies</span> describes two distinct but related subjects:</section>
+	<section class="items">
+	<ol class="items">
+		<li class="items">Design and Technologies, in which students use design thinking and technologies to generate and produce designed solutions for authentic needs and opportunities</li>
+		<li class="items">Digital Technologies, in which students use computational thinking and information systems to define, design and implement digital solutions.</li>
+		</ol>
+	</section>
+	</div>
+	<section class="rational">Rational:</section>
+	<section class="maintext">Technologies enrich and impact on the lives of people and societies globally. Australia needs enterprising individuals who can make discerning decisions about the development and use of technologies and who can independently and collaboratively develop solutions to complex challenges and contribute to sustainable patterns of living. Technologies can play an important role in transforming, restoring and sustaining societies and natural, managed and constructed environments.
+	</section>
+	<section class="maintext">
+The Australian Curriculum: Technologies ensures that all students benefit from learning about and working with traditional, contemporary and emerging technologies that shape the world in which we live. By applying their knowledge and practical skills and processes when using technologies and other resources to create innovative solutions, independently and collaboratively, they develop knowledge, understanding and skills to respond creatively to current and future needs.
+	</section>
+<section class="maintext">The practical nature of the Technologies learning area engages students in critical and creative thinking, including understanding interrelationships in systems when solving complex problems. A systematic approach to experimentation, problem-solving, prototyping and evaluation instils in students the value of planning and reviewing processes to realise ideas.</section>
+<section class="lasttext">
+All young Australians should develop capacity for action and a critical appreciation of the processes through which technologies are developed and how technologies can contribute to societies. Students need opportunities to consider the use and impact of technological solutions on equity, ethics, and personal and social values. In creating solutions, as well as responding to the designed world, students consider desirable sustainable patterns of living, and contribute to preferred futures for themselves and others.</section>
 		
   	  <div class="row" id="footer" >
 		  <div class="col-lg-4" align="left"><a href="contactus.html"><span class="bottomnav">Contact Us</span></a></div>
