--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 	<style type="text/css">
 		
 		header.about {
-			padding-top: 4%; 
-			padding-bottom: 4%; 
+			padding-top: 8%; 
+			padding-bottom: 2%; 
 		}
 		figure {
 			float: left;
@@ -57,7 +57,7 @@
 	<header class="heading1">
 		<h1>Technologies in the Curriculum</h1>
 	</header>
-	<header><img src="webmaster-technologies.jpg" width="770" alt="Lightbulb header"></header>
+	<header style="background-color: #00728a;"><img src="webmaster-technologies.jpg" width="770" alt="Lightbulb header"></header>
 	<nav>
 		<span class="navrow"><a href="digtaltechnologies.html" class="navlink">Digital Technologies</a></span>
 		<span class="navrow"><a href="designtechnologies.html" class="navlink">Design Technologies</a></span>
