--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Mr Drake's Website</title>
+<meta name="author" content="Chris Drake">
 <!-- <link href="css/bootstrap.css" rel="stylesheet" type="text/css"> -->
 <link href="css/bootstrap-3.3.7.css" rel="stylesheet" type="text/css">
 <link href="css/template.css" rel="stylesheet" type="text/css">
 
 	<style type="text/css">
 		
-		header.about {
+		/*header.about {
 			padding-top: 8%; 
 			padding-bottom: 2%; 
-		}
+		}*/
 		figure {
 			float: left;
 			margin-right: 2%;
@@ -45,10 +46,7 @@
 			font-weight:bold;
 			color: #00728a;
 		}
-		section.maintext{
-			padding-top: 1%;
-			
-		}
+		
 	</style>
 </head>
 <body>
@@ -59,14 +57,14 @@
 	</header>
 	<header style="background-color: #00728a;"><img src="webmaster-technologies.jpg" width="770" alt="Lightbulb header"></header>
 	<nav>
-		<span class="navrow"><a href="digtaltechnologies.html" class="navlink">Digital Technologies</a></span>
+		<span class="navrow"><a href="digitaltechnologies.html" class="navlink">Digital Technologies</a></span>
 		<span class="navrow"><a href="designtechnologies.html" class="navlink">Design Technologies</a></span>
 		<span class="navrow"><a href="mediaarts.html" class="navlink">Media Arts</a></span>
 		<span><a href="ict.html" class="navlink">ICT Use</a></span>
 	</nav>
 	
 	
-	<header class="about"><h2>About</h2></header>
+	<header class="subjectheading"><h2>About</h2></header>
 	<div class="section1"><figure><img src="lightbulb.jpg" alt="Lightbulb"></img></figure><section><span class="strong">The Australian Curriculum: Technologies</span> describes two distinct but related subjects:</section>
 	<section class="items">
 	<ol class="items">
@@ -82,8 +80,9 @@
 The Australian Curriculum: Technologies ensures that all students benefit from learning about and working with traditional, contemporary and emerging technologies that shape the world in which we live. By applying their knowledge and practical skills and processes when using technologies and other resources to create innovative solutions, independently and collaboratively, they develop knowledge, understanding and skills to respond creatively to current and future needs.
 	</section>
 <section class="maintext">The practical nature of the Technologies learning area engages students in critical and creative thinking, including understanding interrelationships in systems when solving complex problems. A systematic approach to experimentation, problem-solving, prototyping and evaluation instils in students the value of planning and reviewing processes to realise ideas.</section>
-<section class="lasttext">
+<section class="maintext">
 All young Australians should develop capacity for action and a critical appreciation of the processes through which technologies are developed and how technologies can contribute to societies. Students need opportunities to consider the use and impact of technological solutions on equity, ethics, and personal and social values. In creating solutions, as well as responding to the designed world, students consider desirable sustainable patterns of living, and contribute to preferred futures for themselves and others.</section>
+	<section class="ref">From: <a href="http://www.australiancurriculum.edu.au/technologies/introduction" alt="Reference">http://www.australiancurriculum.edu.au/technologies/introduction</a></section>
 		
   	  <div class="row" id="footer" >
 		  <div class="col-lg-4" align="left"><a href="contactus.html"><span class="bottomnav">Contact Us</span></a></div>
