--- a/digitaltechnologies.html
+++ b/digitaltechnologies.html
@@ -74,7 +74,7 @@
 	</header>
 	<header style="background-color: #00728a;"><img src="webmaster-technologies.jpg" width="770" alt="Lightbulb header"></header>
 	<nav>
-		<span class="navrow"><a href="digtaltechnologies.html" class="navlink" name="Digital Technologies">Digital Technologies</a></span>
+		<span class="navrow"><a href="digitaltechnologies.html" class="navlink" name="Digital Technologies">Digital Technologies</a></span>
 		<span class="navrow"><a href="designtechnologies.html" class="navlink" name="Design Technologies">Design Technologies</a></span>
 		<span class="navrow"><a href="mediaarts.html" class="navlink" name="Media Arts">Media Arts</a></span>
 		<span><a href="ict.html" class="navlink" name="ICT Use">ICT Use</a></span>
