--- a/digitaltechnologies.html
+++ b/digitaltechnologies.html
@@ -111,13 +111,13 @@ It encompasses the application of a wide spectrum of practices including:
 	<tr><td>Redefinition</td><td>Technology allows you to do what was previously not possible</td></tr>
 	<caption>SAMR Model Description</caption>
 </table></section>
-<section class="maintext">For more information, click on the SAMR image above, or see: <a href="http://www.education.vic.gov.au/Documents/school/teachers/support/samrmodel.pdf" name="SAMR Model">SAMR model (pdf - 827.64kb).</a> </section>
+<section class="maintext">For more information, click on the SAMR image above, or see: <a href="http://www.education.vic.gov.au/Documents/school/teachers/support/samrmodel.pdf" name="SAMR Model" target="_blank">SAMR model (pdf - 827.64kb).</a> </section>
   	  <section class="ref">From <a href="http://www.education.vic.gov.au/school/teachers/support/Pages/elearningcurriculum.aspx" alt="Reference">http://www.education.vic.gov.au/school/teachers/support/Pages/elearningcurriculum.aspx</a></section>
 
   	  <div class="row" id="footer" >
-		  <div class="col-lg-4" align="left"><a href="contactus.html" name="Contact Us"><span class="bottomnav">Contact Us</span></a></div>
-	    <div class="col-lg-4" align="center"><a href="sitemap.html" name="Site Map"><span class="bottomnav">Sitemap</span></a></div>
-		  <div class="col-lg-4" align="right"><a href="privacy.html" name="Privacy"><span class="bottomnav">Privacy Policy</a></span></div>
+		  <div class="col-lg-4" align="left"><a href="contactus.html" class="bottomnav">Contact Us</a></div>
+	    <div class="col-lg-4" align="center"><a href="sitemap.html" class="bottomnav">Sitemap</a></div>
+		  <div class="col-lg-4" align="right"><a href="privacy.html" class="bottomnav">Privacy Policy</a></div>
 	  </div>
 	  <div class="row">&nbsp;</div>
 	  
