--- a/ict.html
+++ b/ict.html
@@ -63,9 +63,9 @@
 	<section class="ref">From: <a href="http://www.australiancurriculum.edu.au/generalcapabilities/information-and-communication-technology-capability/introduction/introduction">http://www.australiancurriculum.edu.au/generalcapabilities/information-and-communication-technology-capability/introduction/introduction</a></section>
 	
   	  <div class="row" id="footer" >
-		  <div class="col-lg-4" align="left"><a href="contactus.html" name="Contact Us"><span class="bottomnav">Contact Us</span></a></div>
-	    <div class="col-lg-4" align="center"><a href="sitemap.html" name="Site Map"><span class="bottomnav">Sitemap</span></a></div>
-		  <div class="col-lg-4" align="right"><a href="privacy.html" name="Privacy"><span class="bottomnav">Privacy Policy</a></span></div>
+		  <div class="col-lg-4" align="left"><a href="contactus.html" class="bottomnav">Contact Us</a></div>
+	    <div class="col-lg-4" align="center"><a href="sitemap.html" class="bottomnav">Sitemap</a></div>
+		  <div class="col-lg-4" align="right"><a href="privacy.html" class="bottomnav">Privacy Policy</a></div>
 	  </div>
 	  <div class="row">&nbsp;</div>
 	  
