--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@ All young Australians should develop capacity for action and a critical apprecia
 	<section class="ref">From: <a href="http://www.australiancurriculum.edu.au/technologies/introduction" alt="Reference">http://www.australiancurriculum.edu.au/technologies/introduction</a></section>
 		
   	  <div class="row" id="footer" >
-		  <div class="col-lg-4" align="left"><a href="contactus.html"><span class="bottomnav">Contact Us</span></a></div>
-	    <div class="col-lg-4" align="center"><a href="sitemap.html"><span class="bottomnav">Sitemap</span></a></div>
-		  <div class="col-lg-4" align="right"><a href="privacy.html"><span class="bottomnav">Privacy Policy</a></span></div>
+		  <div class="col-lg-4" align="left"><a href="contactus.html" class="bottomnav">Contact Us</a></div>
+	    <div class="col-lg-4" align="center"><a href="sitemap.html" class="bottomnav">Sitemap</a></div>
+		  <div class="col-lg-4" align="right"><a href="privacy.html" class="bottomnav">Privacy Policy</a></div>
 	  </div>
 	  <div class="row">&nbsp;</div>
 	  
