--- a/mediaarts.html
+++ b/mediaarts.html
@@ -51,7 +51,7 @@
 	
 	
 	<header class="subjectheading"><h2>Media Arts</h2></header>
-	<div class="section1"><figure><iframe width="560" height="315" src="https://www.youtube.com/embed/6BTOwsUev7I" frameborder="0" allowfullscreen></iframe></figure><section>In <span class="strong">Media Arts</span> students engage with communications technologies and cross-disciplinary art forms to design, produce, distribute and interact with a range of print, audio, screen-based or hybrid artworks. Students explore, view, analyse and participate in media culture from a range of viewpoints and in a variety of contexts. They acquire the knowledge and skills to work in a range of media forms and styles. Students learn to reflect critically on their own and others’ media arts experiences and evaluate media artworks from different cultures, time periods and contexts. They express, conceptualise and communicate through their media artworks using creative and critical use of language and technologies with increasing complexity and aesthetic understanding.</section>
+	<div class="section1"><figure><iframe width="560" height="315" src="https://www.youtube.com/embed/6BTOwsUev7I" frameborder="0" allowfullscreen title="youtube" name="youtube"></iframe></figure><section>In <span class="strong">Media Arts</span> students engage with communications technologies and cross-disciplinary art forms to design, produce, distribute and interact with a range of print, audio, screen-based or hybrid artworks. Students explore, view, analyse and participate in media culture from a range of viewpoints and in a variety of contexts. They acquire the knowledge and skills to work in a range of media forms and styles. Students learn to reflect critically on their own and others’ media arts experiences and evaluate media artworks from different cultures, time periods and contexts. They express, conceptualise and communicate through their media artworks using creative and critical use of language and technologies with increasing complexity and aesthetic understanding.</section>
 	</div>
 	<section class="maintext">Students make and respond to Media Arts forms such as film, news report, documentary, advertisement, music video, animation, video games, graphic novels and/or a combination of these. From contemporary and personal experiences of media culture they learn how forms, styles and contexts of media artworks are shaped by histories, purpose, traditions and communications technologies. They produce artworks in narrative and non-narrative forms that reach audiences through specific media contexts that include but are not limited to radio, print, cinema, television, internet, mobile devices or new and emerging contexts.</section>
 	<section class="maintext">Students learn through critical thinking and creative processes in media arts practice. They learn to collaborate in creative teams and analytically respond to, and interact with, context and audience. Students learn to apply key concepts, story principles, and symbolic and technical elements of media as they design, produce, distribute and analyse media artworks. Students learn and use established and emerging techniques and practices (media conventions) for creating within different media forms.</section>
@@ -59,9 +59,9 @@
 		<section class="ref">From: <a href="http://victoriancurriculum.vcaa.vic.edu.au/Search?page=3&sort=type&f=subject!Media+Arts" alt="Reference">http://victoriancurriculum.vcaa.vic.edu.au/Search?page=3&sort=type&f=subject!Media+Arts</a></section>
 	
   	  <div class="row" id="footer" >
-		  <div class="col-lg-4" align="left"><a href="contactus.html" name="Contact Us"><span class="bottomnav">Contact Us</span></a></div>
-	    <div class="col-lg-4" align="center"><a href="sitemap.html" name="Site Map"><span class="bottomnav">Sitemap</span></a></div>
-		  <div class="col-lg-4" align="right"><a href="privacy.html" name="Privacy"><span class="bottomnav">Privacy Policy</a></span></div>
+		  <div class="col-lg-4" align="left"><a href="contactus.html" class="bottomnav">Contact Us</a></div>
+	    <div class="col-lg-4" align="center"><a href="sitemap.html" class="bottomnav">Sitemap</a></div>
+		  <div class="col-lg-4" align="right"><a href="privacy.html" class="bottomnav">Privacy Policy</a></div>
 	  </div>
 	  <div class="row">&nbsp;</div>
 	  
