--- a/digitaltechnologies.html
+++ b/digitaltechnologies.html
@@ -31,9 +31,6 @@
 			padding-top: 2%;
 			padding-bottom: 2%;
 		}
-		li.items{
-			padding-bottom: 2%;
-		}
 		section.textheading{
 			padding-top: 2%;
 			font-weight:bold;
@@ -41,6 +38,9 @@
 		}
 		section.maintext{
 			padding-top: 1%;
+			
+		}
+		table {
 			
 		}
 		th {
@@ -51,7 +51,7 @@
 			padding-top: 5px;
 			padding-bottom: 5px;
 			padding-left: 0px;
-			padding-right: 15px;
+			padding-right: 20px;
 			vertical-align: top;
 		}
 		caption {
