--- a/digitaltechnologies.html
+++ b/digitaltechnologies.html
@@ -72,7 +72,7 @@
 	<header class="heading1">
 		<h1>Technologies in the Curriculum</h1>
 	</header>
-	<header style="background-color: #00728a;"><img src="webmaster-technologies.jpg" width="770" alt="Lightbulb header"></header>
+	<header style="background-color: #00728a"><img src="webmaster-technologies.jpg" width="770" alt="Lightbulb header" class="lightbulb"></header>
 	<nav>
 		<span class="navrow"><a href="digitaltechnologies.html" class="navlink" name="Digital Technologies">Digital Technologies</a></span>
 		<span class="navrow"><a href="designtechnologies.html" class="navlink" name="Design Technologies">Design Technologies</a></span>
