--- a/index.html
+++ b/index.html
@@ -46,7 +46,17 @@
 			font-weight:bold;
 			color: #00728a;
 		}
-		
+		@media only screen and (max-width: 850px) {
+			section.items {
+				padding-left: 0%;
+			}
+			section.rational{
+				padding-top: 0%;
+				font-weight:bold;
+				color: #00728a;
+				font-size: x-small;
+			}
+		}
 	</style>
 </head>
 <body>
@@ -55,7 +65,7 @@
 	<header class="heading1">
 		<h1>Technologies in the Curriculum</h1>
 	</header>
-	<header style="background-color: #00728a;"><img src="webmaster-technologies.jpg" width="770" alt="Lightbulb header"></header>
+	<header style="background-color: #00728a"><img src="webmaster-technologies.jpg" width="770" alt="Lightbulb header" class="lightbulb"></header>
 	<nav>
 		<span class="navrow"><a href="digitaltechnologies.html" class="navlink">Digital Technologies</a></span>
 		<span class="navrow"><a href="designtechnologies.html" class="navlink">Design Technologies</a></span>
