--- a/designtechnologies.html
+++ b/designtechnologies.html
@@ -46,7 +46,7 @@
 	<header class="heading1">
 		<h1>Technologies in the Curriculum</h1>
 	</header>
-	<header style="background-color: #00728a;"><img src="webmaster-technologies.jpg" width="770" alt="Lightbulb header"></header>
+	<header style="background-color: #00728a"><img src="webmaster-technologies.jpg" width="770" alt="Lightbulb header" class="lightbulb"></header>
 	<nav>
 		<span class="navrow"><a href="digitaltechnologies.html" class="navlink" name="Digital Technologies">Digital Technologies</a></span>
 		<span class="navrow"><a href="designtechnologies.html" class="navlink" name="Design Technologies">Design Technologies</a></span>
@@ -56,7 +56,7 @@
 	
 	
 	<header class="subjectheading"><h2>Design Technologies</h2></header>
-	<div class="section1"><figure><iframe width="510" height="265" src="https://www.youtube.com/embed/6zgdVc6U_2I" frameborder="0" allowfullscreen></iframe></figure><section>In <span class="strong">Design and Technologies</span>, students are actively engaged in the processes of creating designed solutions for personal, domestic and global settings for a sustainable future. For younger children, this usually involves personal and family settings, where there is an immediate, direct and tangible outcome and where playfulness and practical exploration are a focus. Students work on projects as they investigate needs and opportunities, generate and evaluate ideas, plan, manage, produce and evaluate designed solutions. They evaluate success by using predetermined criteria that has been negotiated with the class, or developed by students.</section>
+	<div class="section1"><figure><iframe width="470" id="youtube" height="225" src="https://www.youtube.com/embed/6zgdVc6U_2I" frameborder="0" allowfullscreen></iframe></figure><section>In <span class="strong">Design and Technologies</span>, students are actively engaged in the processes of creating designed solutions for personal, domestic and global settings for a sustainable future. For younger children, this usually involves personal and family settings, where there is an immediate, direct and tangible outcome and where playfulness and practical exploration are a focus. Students work on projects as they investigate needs and opportunities, generate and evaluate ideas, plan, manage, produce and evaluate designed solutions. They evaluate success by using predetermined criteria that has been negotiated with the class, or developed by students.</section>
 	</div>
 	<section class="textheading">Integrating the strands</section>
 	<section class="maintext">Teaching and learning programs will typically integrate content from each strand. By the end of each band level, students will have had the opportunity to create different types of designed solutions that addresses all four sub-strands from Technologies Contexts. For example, a unit of learning in Design and Technologies would entail the integration of content descriptions from the Technologies and Society and Creating Designed Solutions strands, and at least one sub-strand from Technologies Contexts. Or, in the Technologies Contexts strand, a unit may address several contexts and include a design brief.</section>
