--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 			color: #00728a;
 		}
 		section.items {
-			padding-left: 60%;
+			float: none;
+			padding-left: 65%;
 		}
 		ol.items{
 			padding-top: 2%;
