--- a/digitaltechnologies.html
+++ b/digitaltechnologies.html
@@ -74,10 +74,11 @@
 	</header>
 	<header style="background-color: #00728a"><img src="webmaster-technologies.jpg" width="770" alt="Lightbulb header" class="lightbulb"></header>
 	<nav>
+	<span class="navrow"><a href="index.html" class="navlink">Home</a></span>
 		<span class="navrow"><a href="digitaltechnologies.html" class="navlink" name="Digital Technologies">Digital Technologies</a></span>
 		<span class="navrow"><a href="designtechnologies.html" class="navlink" name="Design Technologies">Design Technologies</a></span>
 		<span class="navrow"><a href="mediaarts.html" class="navlink" name="Media Arts">Media Arts</a></span>
-		<span><a href="ict.html" class="navlink" name="ICT Use">ICT Use</a></span>
+		<span  class="navrow"><a href="ict.html" class="navlink" name="ICT Use">ICT Use</a></span>
 	</nav>
 	
 	
@@ -111,7 +112,7 @@ It encompasses the application of a wide spectrum of practices including:
 	<tr><td>Redefinition</td><td>Technology allows you to do what was previously not possible</td></tr>
 	<caption>SAMR Model Description</caption>
 </table></section>
-<section class="maintext">For more information, click on the SAMR image above, or see: <a href="http://www.education.vic.gov.au/Documents/school/teachers/support/samrmodel.pdf" name="SAMR Model" target="_blank">SAMR model (pdf - 827.64kb).</a> </section>
+<section class="maintext">For more information, see: <a href="http://www.education.vic.gov.au/Documents/school/teachers/support/samrmodel.pdf" name="SAMR Model" target="_blank">SAMR model (pdf - 827.64kb).</a> </section>
   	  <section class="ref">From <a href="http://www.education.vic.gov.au/school/teachers/support/Pages/elearningcurriculum.aspx" alt="Reference">http://www.education.vic.gov.au/school/teachers/support/Pages/elearningcurriculum.aspx</a></section>
 
   	  <div class="row" id="footer" >
