--- a/digitaltechnologies.html
+++ b/digitaltechnologies.html
@@ -84,7 +84,7 @@
 	
 	<header class="subjectheading"><h2>Digital Technologies</h2></header>
 	<div class="section1"><figure><img src="digitech.jpg" width="483" height="266" alt="Digital Technologies"/></figure>
-	  <section><span class="strong">Digital technologies</span> are electronic tools, systems, devices and resources that generate, store or process data. These includes social media, online games and applications, multimedia, productivity applications, cloud computing, interoperable systems and mobile devices.</section>
+	  <section><span class="strong">Digital Technologies</span> are electronic tools, systems, devices and resources that generate, store or process data. These includes social media, online games and applications, multimedia, productivity applications, cloud computing, interoperable systems and mobile devices.</section>
 	</div>
 	<section class="textheading">Digital Learning:</section>
 	<section class="maintext">Digital learning is any type of learning that is facilitated by technology or by instructional practice that makes effective use of technology. Digital learning occurs across all learning areas and domains.
